--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -843,6 +843,13 @@ No media query since this is the default in Bootstrap because it is "mobile firs
         h2 {
             font-size: 29px;
         }
+        .flyware{
+            margin-left: 389px;
+        }
+        h3{
+            margin: 34px;
+        }
+
     }
 
     .services {
