--- a/CSS/style.css
+++ b/CSS/style.css
@@ -441,17 +441,21 @@ header.open .bar3 {
 .connect form {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  background-color: white;
+  padding: 2vw 4vw;
+  width: 90%;
+  max-width: 600px;
+  border-radius: 10px;
 }
-.connect form input {
-  border-bottom: 2px solid grey;
-  border-top: none;
-  border-left: none;
-  border-right: none;
-  padding: 10px 0;
+.connect form input, .connect form textarea {
+  border: 0;
+  margin: 10px 0;
+  padding: 20px;
+  outline: none;
+  background-color: #f5f5f5;
+  font-size: 16px;
 }
-.connect button {
+.connect form button {
   margin-top: 20px;
   width: 25%;
   border: none;
