--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -571,28 +571,34 @@ header {
     form {
         display: flex;
         flex-direction: column;
-        justify-content: center;
-        align-items: center;
+        // justify-content: center;
+        // align-items: center;
+        background-color: #ffff;
+        padding: 2vw 4vw;
+        width: 90%;
+        max-width: 600px;
+        border-radius: 10px;
 
-        input {
-            border-bottom: 2px solid grey;
-            border-top: none;
-            border-left: none;
-            border-right: none;
-
-            padding: 10px 0;
+        input,textarea{
+           border: 0;
+           margin: 10px 0;
+           padding: 20px;
+           outline: none;
+           background-color: #f5f5f5;
+           font-size: 16px;
+        }
+        button {
+            margin-top: 20px;
+            width: 25%;
+            border: none;
+            background-color: rgb(218, 73, 70);
+            color: #ffff;
+            border-radius: 8px;
+            padding: 10px;
         }
     }
 
-    button {
-        margin-top: 20px;
-        width: 25%;
-        border: none;
-        background-color: rgb(218, 73, 70);
-        color: #ffff;
-        border-radius: 8px;
-        padding: 10px;
-    }
+    
 }
 
 footer {
