--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -557,7 +557,10 @@ header {
 
 .connect {
     margin-top: 50px;
-    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 
     span {
         color: rgb(218, 73, 70);
@@ -866,7 +869,6 @@ No media query since this is the default in Bootstrap because it is "mobile firs
 
         form {
             input {
-                width: 75%;
                 padding: 10px;
             }
 
@@ -1109,7 +1111,6 @@ No media query since this is the default in Bootstrap because it is "mobile firs
         }
 
         form input {
-            width: 50%;
             padding: 10px;
         }
 
